updated index.html meta description for site

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A1 Maths offers a comprehensive math preparation program for primary and secondary schools. This program is designed to provide students with the practice they need to excel in math and to help teachers prepare effective lessons."
     />
     <title>A1 Maths</title>
   </head>
